samples/_failures_safe/1761666116_7c96ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47de8662.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_47de8662.c:121:9: error: expected expression at end of input
  121 |         for (int j =
      |         ^~~
./samples/SAFE/__tmp_47de8662.c:121:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47de8662.c:121:9: error: expected declaration or statement at end of input
